@@ -6,14 +6,19 @@ import org.example.eventticketsystem.dal.dao.UserRepository;
 import org.example.eventticketsystem.dal.dao.UserRoleRepository;
 import org.example.eventticketsystem.dal.models.Role;
 import org.example.eventticketsystem.dal.models.User;
+import org.example.eventticketsystem.utils.di.Injectable;
+import org.example.eventticketsystem.utils.di.Service;
+import org.example.eventticketsystem.utils.di.Injector;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+@Service
 public class AuthService {
     private final UserRepository userRepository;
     private final UserRoleRepository userRoleRepository;
+    private final SessionContext sessionContext;
 
     /**
      * Constructor for AuthService.
@@ -21,9 +26,10 @@ public class AuthService {
      * @param userRepository The UserRepository instance for database operations.
      * @param userRoleRepository The UserRoleRepository instance for role-related operations.
      */
-    public AuthService(UserRepository userRepository, UserRoleRepository userRoleRepository) {
+    public AuthService(UserRepository userRepository, UserRoleRepository userRoleRepository, SessionContext sessionContext) {
         this.userRepository = userRepository;
         this.userRoleRepository = userRoleRepository;
+        this.sessionContext = sessionContext;
     }
 
     /**
@@ -44,8 +50,10 @@ public class AuthService {
                         .findRolesByUserId(user.getId())
                         .stream()
                         .map(Role::getName)
-                        .collect(Collectors.toList());
-                return Optional.of(new SessionContext(user, roleNames));
+                        .toList();
+
+                sessionContext.initialize(user, roleNames);
+                return Optional.of(sessionContext);
             }
         }
         return Optional.empty();
